# MyXARAPUCASim

./: .gitignore  CMakeLists.txt  compile.sh  dataVis.py  main.cpp
include/: ActionInitialization.h  DetectorConstruction.h  EventAction.h  EventInformation.h  MyEventAction.h  MyGenerator.h  MyHit.h  MyRunAction.h  PrimaryGeneratorAction.h  RunAction.h  SensorDetector.h  SteppingAction.h
macro/: init_vis.mac  macro.mac  myRun.mac
source/: DetectorConstruction.cpp  EventAction.cpp  MyEventAction.cpp  MyGenerator.cpp  MyHit.cpp  MyRunAction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SensorDetector.cpp  SteppingAction.cpp  TrackingAction.cpp  oldSteppingAction.cpp
